{
    "name": "TestControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "bae046b8-86d7-4f47-b100-62679dd06d27",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "90d2f1db-22d0-4274-87ed-92ddd056e1cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeDamage",
                    "type": "Button",
                    "id": "d453b8a7-3f83-4e7b-9a4a-4bc753a59d54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HealDamage",
                    "type": "Button",
                    "id": "01fa1a4e-d925-4322-ad35-13d3c0dc2625",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab832c97-5127-4a20-a757-be1043e4eace",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ae0b33d-87cb-40fb-83ab-2399b2397354",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TakeDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d66e02-89fa-42c3-93bc-19d7d5be26e8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HealDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}